# openclaw-compose

./: .env.openclaw.example  .gitignore  README.md  compose.openclaw.ssh.yaml  compose.openclaw.yaml  openclaw_compose.py  pyproject.toml
docs/: agents-and-channels.md  recommendations.md  secrets.md  security.md  setup.md
docs/recipes/: discord.md  ollama.md  overlay-existing-project.md  overlay-traefik-example.md  ssh-profile.md  tailscale.md  telegram.md
examples/traefik-web/: compose.yaml
openclaw/: openclaw.json.example  openclaw.workspace.env.example
scripts/: bootstrap.sh
